# poetry2nix-gnureadline

./: flake.nix  pyproject.toml
